@@ -1,0 +1,11 @@
+DESCRIPTION="Mozart/Oz constraint programming system"
+HOMEPAGE="http://www.mozart-oz.org/"
+KEYWORDS="x86 ppc sparc hppa"
+
+RDEPEND="$RDEPEND
+  dev-lang/mozart-base
+  dev-lang/mozart-stdlib
+  dev-lang/mozart-doc
+  dev-lang/mozart-ozmake
+  gtk? ( dev-lang/mozart-gtk )
+"
